# typebar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.es.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.es.md  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/typebar-core/: Cargo.toml  README.md
crates/typebar-core/src/: blocks.rs  buffers.rs  export.rs  i18n.rs  lib.rs  markdown.rs  text.rs
crates/typebar-core/src/document/: clipboard.rs  history.rs  mod.rs  motion.rs
crates/typebar-gui/: Cargo.toml  build.rs  tauri.conf.json
crates/typebar-gui/capabilities/: default.json
crates/typebar-gui/icons/: icon.icns
crates/typebar-gui/src/: lib.rs  main.rs
crates/typebar-gui/ui/: index.html  main.js  styles.css
crates/typebar-tui/: Cargo.toml
crates/typebar-tui/examples/: sample.md
crates/typebar-tui/src/: buffers.rs  config.rs  export.rs  files.rs  fuzzy.rs  i18n.rs  main.rs  overlay.rs  palette.rs  render.rs  search.rs  switcher.rs  tabs.rs  text.rs  theme_picker.rs  wrap.rs
crates/typebar-tui/src/document/: mod.rs
crates/typebar-tui/src/keybinding/: custom.rs  mod.rs  standard.rs  vim.rs  wordstar.rs
crates/typebar-tui/src/theme/: mod.rs
docs/: ARCHITECTURE.md
examples/: config.toml
src/: buffers.rs  config.rs  document.rs  fuzzy.rs  i18n.rs  keybinding.rs  main.rs  markdown.rs  overlay.rs  palette.rs  render.rs  switcher.rs  tabs.rs  text.rs
src/document/: clipboard.rs  edit.rs  find.rs  mod.rs  motion.rs  select.rs
src/keybinding/: custom.rs  mod.rs  standard.rs  vim.rs  wordstar.rs
src/theme/: mod.rs
