[workspace]
resolver = "3"
members = ["crates/*"]

# Metadata compartida por todos los crates del workspace (typebar-tui y, mas
# adelante, typebar-core / typebar-gui). Cada crate la hereda con `*.workspace = true`.
[workspace.package]
version = "0.2.0"
edition = "2024"
authors = ["Roberto Cantore Galvez"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rcantore/typebar"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
