[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Roberto Cantore Galvez"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rcantore/typebar"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
