[package]
name = "typebar-gui"
description = "Spike de la GUI de escritorio (Tauri v2) del editor typebar; consume typebar-core."
# Spike interno: no debe publicarse nunca en un registro por accidente.
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# La convencion de Tauri parte el crate en una lib (donde vive `run()`, util
# tambien para targets moviles) y un binario finito que solo la invoca.
[lib]
name = "typebar_gui_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
typebar-core = { path = "../typebar-core", version = "0.3.1" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
