[package]
name = "typebar"
description = "Editor de Markdown WYSIWYG para terminal, con keybindings configurables (standard/vim/wordstar)."
keywords = ["markdown", "editor", "tui", "wysiwyg", "terminal"]
categories = ["command-line-utilities", "text-editors"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
typebar-core = { path = "../typebar-core", version = "0.3.1" }
crossterm = "0.29"
dirs = "6.0.0"
ratatui = "0.30"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
unicode-width = "0.2.2"

[dev-dependencies]
# Los tests de la TUI construyen `Document`s de prueba con
# `typebar_core::document::test_support`, que solo se compila con esta feature.
typebar-core = { path = "../typebar-core", version = "0.3.1", features = [
    "test-support",
] }
